// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform-jsx-css-modules amends class names if styles import is provided: amends class names if styles import is provided 1`] = `
"
import './styles.css';

<div className=\\"hello\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __cssmodule__ from \\"./styles.css\\";


<div className={[__cssmodule__[\\"hello\\"]]}></div>;
"
`;

exports[`transform-jsx-css-modules does not change import if styles is imported already: does not change import if styles is imported already 1`] = `
"
import __cssmodule__ from './styles.css';

<div className=\\"hello\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __cssmodule__ from './styles.css';

<div className={[__cssmodule__[\\"hello\\"]]}></div>;
"
`;
